@startuml
' Diagram: F13 - Class diagram tong quan he thong VinhKhanhTour
' Status: VERIFIED
' Baseline: HEAD 8ca9ec7
' Source:
' - VinhKhanhTourDemo/AppConfig.cs, AppClientLogic.cs, DeviceIdentity.cs, SubscriptionState.cs
' - VinhKhanhTourDemo/LaunchPage.xaml.cs, SubscriptionPage.xaml.cs, MainPage.xaml.cs
' - VinhKhanhTourDemo/DetailPage.xaml.cs, PaymentPage.xaml.cs, PaymentStatusPage.xaml.cs, QrScannerPage.xaml.cs, PoiPlaybackLogic.cs
' - VinhKhanhTour.API/Controllers/PoiController.cs, HeartbeatController.cs, SubscriptionController.cs
' - VinhKhanhTour.API/Data/AppDBContext.cs
' - VinhKhanhTour.API/Models/POI.cs, ThuyetMinh.cs, BanDich.cs, MonAn.cs
' - VinhKhanhTour.API/Models/LichSuPhat.cs, TaiKhoan.cs, DangKyDichVu.cs, HoaDon.cs
' - VinhKhanhTour.API/Models/DangKyApp.cs, YeuCauThanhToan.cs, VitriKhach.cs
' Note: So do nay mo ta cau truc lop va quan he van hanh chinh giua MAUI app, API, DbContext va model du lieu.
' Note: Da cap nhat theo refactor hien tai: helper AppClientLogic, queue/geofence helper trong PoiPlaybackLogic, va quan he dieu phoi hien tai cua MainPage.
title F13 - Class diagram tong quan VinhKhanhTour

skinparam classAttributeIconSize 0
hide empty members

package "MAUI App" {
  class LaunchPage {
    -RouteAsync()
  }

  class SubscriptionPage {
    #OnAppearing()
    -UpdateRecoveryCard()
    -RestoreSubscriptionStateAsync(deviceId)
    -ActivateFreeTrialAsync(deviceId)
  }

  class MainPage {
    #OnAppearing()
    -EnsureSubscriptionGateAsync()
    -RestoreSubscriptionStateAsync()
    -RestorePoiHistoryAsync()
    -EnsureGpsTrackingAsync()
    -LoadPoisFromApi(showFailureAlert)
    -SendHeartbeatAsync(lat, lng)
    -RecordPoiViewAsync(poi)
    -RecordPoiVisitAsync(poi)
    -SyncPoiHistoryAsync()
    -LoadMap()
    -RefreshMapIfNeeded()
    -CheckGeofence(lat, lng)
  }

  class DetailPage {
    -LoadDetail(poiId, tenPoi)
    -UseFallback(tenPoi)
    -RenderMenu(monAns)
    -OnNgheClicked(sender, e)
  }

  class PaymentPage {
    -SetupUi()
    -OnDaChuyenKhoanClicked(sender, e)
  }

  class PaymentStatusPage {
    #OnAppearing()
    -StartPollingAsync(ct)
    -PollStatusAsync()
    -ClosePaymentFlowAsync(closeSubscriptionPage)
  }

  class QrScannerPage {
    -OnBarcodesDetected(sender, e)
  }

  class AppConfig <<static>> {
    +ApiBaseUrl
    +EnsureApiBaseUrlAsync()
    +CanReachApiBaseUrlAsync()
    +NormalizeApiBaseUrl()
    +ResolveImageUrl()
  }

  class AppClientLogic <<static>> {
    +NormalizeApiBaseUrl()
    +ResolveImageUrl()
    +CalculateRemainingDays()
  }

  class DeviceIdentity <<static>> {
    +GetDeviceId()
    +GetShortDeviceId()
    +BuildRecoveryPayload()
    +BuildQrCodeUrl()
    +TrySetDeviceIdOverride(rawCode, out deviceId)
  }

  class SubscriptionState <<static>> {
    +HasStoredSubscriptionRecord()
    +IsSubscriptionActive()
    +CalculateRemainingDays()
  }

  class UserGeoLocation {
    +Latitude
    +Longitude
  }

  class PoiPlaybackItem {
    +Id
    +TenPOI
    +ViDo
    +KinhDo
    +BanKinh
    +MucUuTien
  }

  class PoiSelection {
    +Poi
    +DistanceMeters
  }

  class PoiGeofenceSelector <<static>> {
    +Select(pois, userLocation, currentPoiId, switchDistanceBufferMeters)
  }

  class "PoiPlaybackQueue<T>" as PoiPlaybackQueue {
    +Enqueue(id, value)
    +TryDequeue(out id, out value)
    +SetPlaying(id)
    +ClearPlaying(id)
  }

  class PoiDto {
    +Id
    +TenPOI
    +ViDo
    +KinhDo
    +BanKinh
    +MucUuTien
  }
}

package "API Controllers" {
  class PoiController {
    +GetAll()
    +GetById(id)
  }

  class HeartbeatController {
    +SendHeartbeat(req)
    +RecordVisit(req)
    +RecordView(req)
    +SyncHistory(req)
    +GetExperienceProfile(maThietBi)
    +GetActive()
    +GetHistory(maThietBi)
  }

  class SubscriptionController {
    +GetPlans()
    +GetStatus(maThietBi)
    +Purchase(req)
    +CreateRequest(req)
    +GetRequestStatus(yeuCauId)
    +Approve(yeuCauId, req)
    +Reject(yeuCauId, req)
    +GetRequests(trangThai)
  }

  class AppDbContext {
    +POIs
    +ThuyetMinhs
    +BanDichs
    +MonAns
    +LichSuPhats
    +TaiKhoans
    +DangKyDichVus
    +HoaDons
    +DangKyApps
    +YeuCauThanhToans
    +VitriKhachs
  }
}

package "Domain Models" {
  class POI {
    +Id
    +TenPOI
    +ViDo
    +KinhDo
    +BanKinh
    +MucUuTien
    +TrangThai
    +NgayHetHanDuyTri
  }

  class ThuyetMinh {
    +Id
    +POIId
    +ThuTu
    +TrangThai
  }

  class BanDich {
    +Id
    +ThuyetMinhId
    +NgonNgu
    +NoiDung
    +FileAudio
  }

  class MonAn {
    +Id
    +POIId
    +TenMonAn
    +DonGia
    +PhanLoai
    +TinhTrang
  }

  class LichSuPhat {
    +Id
    +POIId
    +ThuyetMinhId
    +ThoiGian
    +NgonNguDung
    +Nguon
    +MaThietBi
  }

  class TaiKhoan {
    +Id
    +TenDangNhap
    +VaiTro
    +TrangThai
    +PoiId
  }

  class DangKyDichVu {
    +Id
    +POIId
    +PhiDuyTriThang
    +PhiConvert
    +NgayBatDau
    +NgayHetHan
    +TrangThai
  }

  class HoaDon {
    +Id
    +POIId
    +TaiKhoanId
    +LoaiPhi
    +SoTien
    +KyThanhToan
  }

  class DangKyApp {
    +Id
    +MaThietBi
    +LoaiGoi
    +NgayBatDau
    +NgayHetHan
    +SoTien
  }

  class YeuCauThanhToan {
    +Id
    +MaThietBi
    +LoaiGoi
    +SoTien
    +NoiDungChuyen
    +TrangThai
    +NgayTao
    +NgayDuyet
  }

  class VitriKhach {
    +Id
    +MaThietBi
    +Lat
    +Lng
    +LanCuoiHeartbeat
    +PoiIdHienTai
    +TenPoiHienTai
  }
}

LaunchPage --> SubscriptionState : doc trang thai dang ky
LaunchPage --> SubscriptionPage : mo gate khi can
LaunchPage --> MainPage : vao man hinh chinh

SubscriptionPage --> DeviceIdentity : ma thiet bi / QR recovery
SubscriptionPage --> AppConfig : tim API dang dung
SubscriptionPage --> QrScannerPage : quet QR khoi phuc
SubscriptionPage --> PaymentPage : mo luong thanh toan
SubscriptionPage ..> SubscriptionController : GET/POST subscription

PaymentPage --> DeviceIdentity : gan MaThietBi
PaymentPage --> AppConfig : resolve API
PaymentPage --> PaymentStatusPage : theo doi ket qua duyet
PaymentPage ..> SubscriptionController : POST request

PaymentStatusPage --> AppConfig : resolve API
PaymentStatusPage --> MainPage : dong flow va quay ve app
PaymentStatusPage ..> SubscriptionController : GET request status

MainPage --> AppConfig : resolve API / image URL
MainPage --> AppClientLogic : image/url helpers
MainPage --> DeviceIdentity : dinh danh thiet bi
MainPage --> PoiGeofenceSelector : chon POI trong geofence
MainPage --> PoiPlaybackQueue : queue audio per-device
MainPage --> DetailPage : mo chi tiet POI
MainPage --> QrScannerPage : quet ma khoi phuc
MainPage ..> PoiController : GET POI
MainPage ..> HeartbeatController : heartbeat / view / visit / sync / profile
MainPage --> PoiDto : render list + map

DetailPage --> AppConfig : resolve anh / audio URL
DetailPage ..> PoiController : GET chi tiet POI

AppConfig --> AppClientLogic : delegate helpers
SubscriptionState --> AppClientLogic : CalculateRemainingDays()
PoiGeofenceSelector --> UserGeoLocation
PoiGeofenceSelector --> PoiPlaybackItem
PoiGeofenceSelector --> PoiSelection
PoiPlaybackQueue ..> PoiDto : queue item

PoiController --> AppDbContext
HeartbeatController --> AppDbContext
SubscriptionController --> AppDbContext

AppDbContext o-- POI
AppDbContext o-- ThuyetMinh
AppDbContext o-- BanDich
AppDbContext o-- MonAn
AppDbContext o-- LichSuPhat
AppDbContext o-- TaiKhoan
AppDbContext o-- DangKyDichVu
AppDbContext o-- HoaDon
AppDbContext o-- DangKyApp
AppDbContext o-- YeuCauThanhToan
AppDbContext o-- VitriKhach

POI "1" o-- "*" ThuyetMinh
ThuyetMinh "1" o-- "*" BanDich
POI "1" o-- "*" MonAn
POI "1" o-- "*" DangKyDichVu
POI "1" o-- "*" HoaDon
POI "1" o-- "*" LichSuPhat
POI "1" o-- "*" VitriKhach : PoiIdHienTai
TaiKhoan "0..1" --> "0..*" HoaDon
TaiKhoan "0..1" --> "0..1" POI : quan ly phu trach
DangKyApp .. YeuCauThanhToan : join logic theo MaThietBi
DangKyApp .. VitriKhach : join logic theo MaThietBi
DangKyApp .. LichSuPhat : join logic theo MaThietBi
YeuCauThanhToan .. LichSuPhat : lien ket audit theo MaThietBi

note right of MainPage
  MainPage la tam dieu phoi chinh cua app:
  - nap danh sach POI
  - ve map / marker / geofence
  - heartbeat 10s
  - refresh POI 20s
  - geofence + audio + log lich su
  - dong bo profile / lich su qua MaThietBi
end note

note right of SubscriptionController
  Quan ly goi su dung:
  - "thu" 3 ngay, mien phi 1 lan / thiet bi
  - "ngay", "tuan", "thang", "nam"
  - tao yeu cau chuyen khoan
  - app polling trang thai 10s
  - Approve/Reject duoc bao ve boi AdminApiKey
end note

@enduml
